# onboardosk

./: .gitignore  COPYING  ChangeLog  Makefile-common.mk  Makefile.am  README.md  autogen.sh  build_log  configure.ac  m  project_config.h.in~
data/: Makefile.am  onboardosk-default-settings.gschema.override.example  org.onboardosk.gschema.xml
data/icons/: Makefile.am
data/sounds/: Makefile.am
emojione/: Makefile.am
layouts/: Makefile.am  word_suggestions.xml
models/: Makefile.am
po/: ChangeLog  LINGUAS  Makevars  POTFILES.in  POTFILES.skip
src/: Makefile.am
src/libcommon/: Makefile.am
src/libcommon/tools/: container_helpers.h  file_helpers.cpp  file_helpers.h  glib_helpers.h  iostream_helpers.h  path_helpers.cpp  path_helpers.h  string_helpers.cpp  string_helpers.h  textdecls.h  ustringmain.cpp  ustringmain.h  ustringregex.cpp  ustringregex.h
src/liblm/: Makefile.am  lm.cpp  lm.h  lm_decls.h  lm_dynamic.cpp  lm_dynamic.h  lm_dynamic_cached.h  lm_dynamic_impl.h  lm_dynamic_kn.h  lm_heapalloc.cpp  lm_heapalloc.h  lm_merged.cpp  lm_merged.h  lm_python.cpp  lm_tokenize.cpp  lm_tokenize.h  lm_unigram.cpp  lm_unigram.h  lm_wrapper.cpp  lm_wrapper.h  pool_allocator.cpp  pool_allocator.h
src/libonboardosk/: Makefile.am  atspistatetracker.cpp  atspistatetracker.h  audiobackendcanberra.cpp  audioplayer.cpp  audioplayer.h  autohide.cpp  autohide.h  autoshow.cpp  autoshow.h  buttoncontroller.cpp  buttoncontroller.h  callonce.cpp  callonce.h  canonicalequivalents.cpp  canonicalequivalents.h  characterdata.cpp  characterdata.h  clickgenerator.cpp  clickgenerator.h  colorscheme.cpp  colorscheme.h  commandlineoptions.cpp  commandlineoptions.h  configdecls.h  configobject.cpp  configobject.h  configuration.cpp  configuration.h  drawingcontext.cpp  drawingcontext.h  dwellprogresscontroller.cpp  dwellprogresscontroller.h  emojidata.h  exception.cpp  exception.h  fadetimer.cpp  fadetimer.h  globalkeylistener.cpp  globalkeylistener.h  (+129 more)
src/libonboardosk/tools/: border.h  border_decl.h  border_fwd.h  cairocontext.cpp  cairocontext.h  color.h  drawing_helpers.cpp  drawing_helpers.h  enum_helpers.h  image.cpp  image.h  imagesvg.cpp  imagesvg.h  keydecls.h  logger.cpp  logger.h  loggerdecls.h  noneable.h  platform_helpers.cpp  platform_helpers.h  point.cpp  point.h  point_decl.h  point_fwd.h  process_helpers.cpp  process_helpers.h  rect.cpp  rect.h  rect_decl.h  rect_fwd.h  stacktrace.cpp  stacktrace.h  thread_helpers.cpp  thread_helpers.h  time_helpers.cpp  time_helpers.h  version.cpp  version.h  xdgdirs.cpp  xdgdirs.h
src/libonboardosk/wayland/: virtkey_wayland.cpp
src/libonboardosk/x11/: inputeventsourcexinput.cpp  inputeventsourcexinput.h  virtkey_x11.cpp
src/onboard-gnome-shell/: Makefile.am  onboardosk-instance.c  onboardosk-instance.h  onboardosk-keyboardview.c  onboardosk-keyboardview.h  test_stage.js
src/onboard-gnome-shell/OnboardOSK@onboardosk.org/: Makefile.am  extension.js  metadata.json
src/onboard-gtk/: Makefile.am  main.cpp  platformquirks.cpp  platformquirks.h
themes/: Makefile.am
tools/: gen_linguas  install_gsettings_schema  list_include_dirs  list_missing_translatable_files  py2cpp
