layoutsdir = $(pkgdatadir)/layouts

nobase_dist_layouts_DATA = \
	Compact-Alpha.svg \
	Compact-Numbers.svg \
	Compact.onboard \
	Compact-Utils.svg \
	French_diacritics-Lower.svg \
	French_diacritics.onboard \
	French_diacritics-Upper.svg \
	Full_Keyboard-Alpha.svg \
	Full_Keyboard-Numpad.svg \
	Full_Keyboard.onboard \
	Grid-Alpha.svg \
	Grid.onboard \
	key_defs.xml \
	Phone-Alpha.svg \
	Phone-Emoji.svg \
	Phone-Numbers.svg \
	Phone.onboard \
	Phone-Syms.svg \
	Small-Alpha.svg \
	Small-Emoji.svg \
	Small-Fn.svg \
	Small-Numbers.svg \
	Small.onboard \
	Small-Snippets.svg \
	Small-Syms.svg \
	Whiteboard-Alpha.svg \
	Whiteboard-Arrows.svg \
	Whiteboard-Emoji.svg \
	Whiteboard-Greek.svg \
	Whiteboard-Numbers.svg \
	Whiteboard.onboard \
	Whiteboard-Syms.svg \
	Whiteboard_wide-Alpha.svg \
	Whiteboard_wide.onboard \
	word_suggestions.xml \
	images/arrow-down.svg \
	images/arrow-left.svg \
	images/arrow-right.svg \
	images/close.svg \
	images/double-click.svg \
	images/drag-click.svg \
	images/emoji_snippets.svg \
	images/emoji.svg \
	images/erase-left.svg \
	images/erase.svg \
	images/hide.svg \
	images/hover-click.svg \
	images/middle-click.svg \
	images/move.svg \
	images/numpad_snippets.svg \
	images/pause.svg \
	images/preferences.svg \
	images/right-click.svg \
	images/show-click.svg \
	images/single-click.svg \
	images/snippets.svg \
	$(NULL)
	

