
modelsdir = $(pkgdatadir)/models

nobase_dist_models_DATA = \
	bg_BG.lm \
	da_DK.lm \
	de_AT.lm \
	de_CH.lm \
	de_DE.lm \
	el_GR.lm \
	en_AU.lm \
	en_CA.lm \
	en_GB.lm \
	en_US.lm \
	eo_XX.lm \
	es_ES.lm \
	fr_FR.lm \
	ga_IE.lm \
	gd_GB.lm \
	it_IT.lm \
	lb_LU.lm \
	nl_AN.lm \
	nl_AW.lm \
	nl_BE.lm \
	nl_NL.lm \
	nl_SR.lm \
	pl_PL.lm \
	pt_BR.lm \
	pt_PT.lm \
	ro_RO.lm \
	ru_RU.lm \
	sv_SE.lm \
	tr_TR.lm
	
	
