themesdir = $(pkgdatadir)/themes

# nobase=keep directory structure, 
# dist=include in tarball (make dist)
# DATA=don't compile
nobase_dist_themes_DATA = \
	Ambiance.theme \
	Aubergine.colors \
	Blackboard.theme \
	Black.colors \
	Charcoal.colors \
	Classic_Onboard.colors \
	Classic_Onboard.theme \
	DarkRoom.colors \
	DarkRoom.theme \
	Droid.theme \
	Granite.colors \
	HighContrast.colors \
	HighContrastInverseBlack.colors \
	HighContrastInverseBlue.colors \
	HighContrastInverse.theme \
	HighContrast.theme \
	LowContrast.colors \
	LowContrast.theme \
	ModelM.colors \
	ModelM.theme \
	Nightshade.theme \
	Typist.colors \
	Typist.theme
	
	

